# adventofcode

./: .cookie_value.sample  .gitignore  README.md  pyproject.toml
2020/: puzzle_day_1.py  puzzle_day_10.py  puzzle_day_11.py  puzzle_day_12.py  puzzle_day_2.py  puzzle_day_3.py  puzzle_day_4.py  puzzle_day_5.py  puzzle_day_6.py  puzzle_day_7.py  puzzle_day_8.py  puzzle_day_9.py  utils.py
2021/: puzzle_day_1.py  puzzle_day_10.py  puzzle_day_11.py  puzzle_day_12.py  puzzle_day_13.py  puzzle_day_14.py  puzzle_day_15.py  puzzle_day_16.py  puzzle_day_17.py  puzzle_day_18.py  puzzle_day_18_2.py  puzzle_day_19.py  puzzle_day_2.py  puzzle_day_20.py  puzzle_day_21.py  puzzle_day_22.py  puzzle_day_3.py  puzzle_day_4.py  puzzle_day_5.py  puzzle_day_6.py  puzzle_day_7.py  puzzle_day_8.py  puzzle_day_9.py  squeletor.py  test.py  utils.py
2021/inputs/: day_18_test.txt  test.py
2022/day_1/: code.py
2022/day_2/: code.py
2022/day_3/: code.py
2022/day_4_/: code.py
2023/day 2/: code.py  code2.py
2023/day_1/: code.py
notebooks/: day 4.ipynb
