[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = "Advent of code"
authors = ["Swann <swann.bouviermuller@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.6"
requests = "^2.26.0"
flake8 = "^4.0.1"
more-itertools = "^8.12.0"
pandas = "^1.3.4"
termcolor = "^1.1.0"
joblib = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
